prevented img overflow

--- a/css/filter-gallery.css
+++ b/css/filter-gallery.css
@@ -17,7 +17,7 @@
   position: relative;
 }
 .photo-container img {
-  width: 100%
+  height: 100%;
 }
 
 img.front-image {
@@ -119,6 +119,7 @@ button.button:focus {
   height: 10vw;
   margin: 0 auto;
   position: relative;
+  overflow: hidden;
 }
 
 .content {
